🛠️  fix layout issues, improve ux

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,9 +47,15 @@
     --foreground: #ededed;
   }
 } */
+* {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
 
 body {
   height: 100dvh;
+  /* allow scrolling but hide scrollbar */
 }
 
 /* @media screen and (min-width: 768px) {
